[gd_scene load_steps=18 format=3 uid="uid://bts85jkpxcyyl"]

[ext_resource type="Script" path="res://scripts/midi_processor.gd" id="1_3kk6h"]
[ext_resource type="Script" path="res://addons/midi/MidiPlayerAddon.gd" id="3_1tp21"]
[ext_resource type="Shader" path="res://scripts/overlay3d.gdshader" id="4_37w5g"]
[ext_resource type="Shader" path="res://scripts/waves.gdshader" id="6_hwyg6"]
[ext_resource type="Script" path="res://scripts/midi_receiver.gd" id="6_p3jmh"]
[ext_resource type="Shader" path="res://scripts/test_sphere.gdshader" id="6_txkay"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_8urim"]
sky_top_color = Color(0.828516, 0.524664, 7.70092e-07, 1)
sky_horizon_color = Color(0.627077, 0.636225, 0.825774, 1)
ground_bottom_color = Color(0.13515, 0.248337, 0.334171, 1)
ground_horizon_color = Color(0.615434, 0.638822, 0.834779, 1)

[sub_resource type="Sky" id="Sky_pbdgm"]
sky_material = SubResource("ProceduralSkyMaterial_8urim")

[sub_resource type="Environment" id="Environment_xo5ig"]
background_mode = 1
background_color = Color(0.489533, 0.392, 0.7, 1)
sky = SubResource("Sky_pbdgm")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d7o3u"]
render_priority = 0
shader = ExtResource("6_txkay")

[sub_resource type="SphereMesh" id="SphereMesh_biq5k"]
material = SubResource("ShaderMaterial_d7o3u")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_hmpuh"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_n64ke"]
width = 1920
height = 1080
in_3d_space = true
seamless = true
noise = SubResource("FastNoiseLite_hmpuh")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_poibb"]
render_priority = 0
shader = ExtResource("4_37w5g")
shader_parameter/distortion_intensity = 0.0
shader_parameter/distortion_texture = SubResource("NoiseTexture2D_n64ke")

[sub_resource type="QuadMesh" id="QuadMesh_74lex"]
material = SubResource("ShaderMaterial_poibb")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sqfg8"]
render_priority = 0
shader = ExtResource("6_hwyg6")
shader_parameter/amplitude = 0.3
shader_parameter/frequency = 10.0
shader_parameter/speed = 3.0
shader_parameter/wave_direction = Vector2(0, 1)
shader_parameter/add_color = Color(0.2904, 0.771907, 0.88, 0.392157)

[sub_resource type="PlaneMesh" id="PlaneMesh_3se3j"]
material = SubResource("ShaderMaterial_sqfg8")
size = Vector2(3.54, 2)
subdivide_width = 105
subdivide_depth = 105

[node name="Main" type="Node3D"]
script = ExtResource("1_3kk6h")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(0.942886, 0.333113, -0.00126744, -0.333116, 0.942879, -0.0035875, 0, 0.00380481, 0.999993, -1.14598, 0.710281, 1.28442)

[node name="SpotLight3D2" type="SpotLight3D" parent="."]
transform = Transform3D(0.92958, 0.32905, 0.166155, -0.333116, 0.942879, -0.0035875, -0.157844, -0.0520139, 0.986093, 1.02373, 0.710281, 1.28442)

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.550254, 0.614948)

[node name="ArlezMidiPlayer" type="Node" parent="."]
script = ExtResource("3_1tp21")
file = "res://midi/in_a_mellow_tone_djl.mid"
soundfont = "res://data/Timbres of Heaven (XGM) 4.00(G).sf2"

[node name="MidiReceiver" type="Node" parent="."]
script = ExtResource("6_p3jmh")

[node name="Camera3D" type="Camera3D" parent="."]
current = true

[node name="Synaesthesia" type="Node3D" parent="Camera3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_xo5ig")

[node name="TestSphere" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.429)
visible = false
mesh = SubResource("SphereMesh_biq5k")

[node name="GlobalOverlay" type="MeshInstance3D" parent="."]
visible = false
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_74lex")
skeleton = NodePath("")

[node name="Waves" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.942057, -0.335452, 0, 0.335452, 0.942057, 0, -0.24026, -1.1051)
mesh = SubResource("PlaneMesh_3se3j")

[connection signal="midi_event" from="ArlezMidiPlayer" to="MidiReceiver" method="_on_midi_event"]
[connection signal="note_off" from="MidiReceiver" to="." method="_on_midi_receiver_note_off"]
[connection signal="note_off" from="MidiReceiver" to="Camera3D/Synaesthesia" method="_on_midi_receiver_note_off"]
[connection signal="note_on" from="MidiReceiver" to="." method="_on_midi_receiver_note_on"]
[connection signal="note_on" from="MidiReceiver" to="Camera3D/Synaesthesia" method="_on_midi_receiver_note_on"]
